<?xml version="1.0"?>
<package format="2">
  <name>opbotslam</name>
  <version>0.0.1</version>
  <description>Package for managing the turtlebot navigation for opbots</description>

 
  <maintainer email="osman@alumni.ubc.ca">osman</maintainer>


  <license>BSD</license>


 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>astra_camera</build_depend>
  <build_depend>hokuyo_node</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>turtlebot</build_depend>
  <build_depend>urg_node</build_depend>
  <build_export_depend>astra_camera</build_export_depend>
  <build_export_depend>hokuyo_node</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>turtlebot</build_export_depend>
  <build_export_depend>urg_node</build_export_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>hokuyo_node</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>turtlebot</exec_depend>
  <exec_depend>urg_node</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
